; ModuleID = '/home/carl/AnghaBench/bitwise/ion/extr_lex.c_expect_token.c'
source_filename = "/home/carl/AnghaBench/bitwise/ion/extr_lex.c_expect_token.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [26 x i8] c"Expected token %s, got %s\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @expect_token(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = call i64 @is_token(i32 %4)
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %9

7:                                                ; preds = %1
  %8 = call i32 (...) @next_token()
  store i32 1, i32* %2, align 4
  br label %14

9:                                                ; preds = %1
  %10 = load i32, i32* %3, align 4
  %11 = call i32 @token_kind_name(i32 %10)
  %12 = call i32 (...) @token_info()
  %13 = call i32 @fatal_error_here(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0), i32 %11, i32 %12)
  store i32 0, i32* %2, align 4
  br label %14

14:                                               ; preds = %9, %7
  %15 = load i32, i32* %2, align 4
  ret i32 %15
}

declare dso_local i64 @is_token(i32) #1

declare dso_local i32 @next_token(...) #1

declare dso_local i32 @fatal_error_here(i8*, i32, i32) #1

declare dso_local i32 @token_kind_name(i32) #1

declare dso_local i32 @token_info(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
